[tool.poetry]
name = "diversity-orgs-db"
version = "0.1.0"
description = ""
authors = ["Jay Miller <kjaymiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
